--- a/upiter-data/data/networklineprofile/RetailSubscriberProfilesExpected.yaml
+++ b/upiter-data/data/networklineprofile/RetailSubscriberProfilesExpected.yaml
@@ -1,4 +1,4 @@
-name: RetailSubscriberCreation
+name: RetailSubscriberNetworkLineProfileFtth
 template: com.tsystems.tm.acc.ta.data.osr.models.SubscriberNetworkLineProfile
 values:
   state: "ACTIVE"
@@ -7,5 +7,17 @@ values:
   maxUpBandwidth: 584064
   minDownBandwidth: 63680
   minUpBandwidth: 21312
+  guaranteedDownBandwidth: 63680
+  guaranteedUpBandwidth: 21312
+---
+name: RetailSubscriberNetworkLineProfileFttb
+template: com.tsystems.tm.acc.ta.data.osr.models.SubscriberNetworkLineProfile
+values:
+  state: "ACTIVE"
+  klsId: 12345
+  maxDownBandwidth: 1168256
+  maxUpBandwidth: 292096
+  minDownBandwidth: 1152
+  minUpBandwidth: 768
   guaranteedDownBandwidth: 63680
   guaranteedUpBandwidth: 21312
