--- a/upiter-data/data/networklineprofile/WSSubscriberProfilesExpected.yaml
+++ b/upiter-data/data/networklineprofile/WSSubscriberProfilesExpected.yaml
@@ -1,4 +1,4 @@
-name: WSSubscriberNetworkLineProfile
+name: WsSubscriberNetworkLineProfileActivationFtth
 template: com.tsystems.tm.acc.ta.data.osr.models.SubscriberNetworkLineProfile
 values:
   state: "ACTIVE"
@@ -11,3 +11,45 @@ values:
   guaranteedUpBandwidth: 21312
   downBandwidth: 123000
   upBandwidth: 123000
+---
+name: WsSubscriberNetworkLineProfileModificationFtth
+template: com.tsystems.tm.acc.ta.data.osr.models.SubscriberNetworkLineProfile
+values:
+  state: "ACTIVE"
+  klsId: 12345
+  maxDownBandwidth: 1168192
+  maxUpBandwidth: 584064
+  minDownBandwidth: 63680
+  minUpBandwidth: 21312
+  guaranteedDownBandwidth: 63680
+  guaranteedUpBandwidth: 21312
+  downBandwidth: 223000
+  upBandwidth: 223000
+---
+name: WsSubscriberNetworkLineProfileActivationFttb
+template: com.tsystems.tm.acc.ta.data.osr.models.SubscriberNetworkLineProfile
+values:
+  state: "ACTIVE"
+  klsId: 12345
+  maxDownBandwidth: 1168256
+  maxUpBandwidth: 292096
+  minDownBandwidth: 1152
+  minUpBandwidth: 768
+  guaranteedDownBandwidth: 63680
+  guaranteedUpBandwidth: 21312
+  downBandwidth: 123000
+  upBandwidth: 123000
+---
+name: WsSubscriberNetworkLineProfileModificationFttb
+template: com.tsystems.tm.acc.ta.data.osr.models.SubscriberNetworkLineProfile
+values:
+  state: "ACTIVE"
+  klsId: 12345
+  maxDownBandwidth: 1168256
+  maxUpBandwidth: 292096
+  minDownBandwidth: 1152
+  minUpBandwidth: 768
+  guaranteedDownBandwidth: 63680
+  guaranteedUpBandwidth: 21312
+  downBandwidth: 223000
+  upBandwidth: 223000
