--- a/upiter-data/data/networklineprofile/A4L2bsaResourceOrderRequests.yml
+++ b/upiter-data/data/networklineprofile/A4L2bsaResourceOrderRequests.yml
@@ -1,15 +1,55 @@
-name: l2BsaNspReferenceActivation
-template: com.tsystems.tm.acc.ta.data.osr.models.L2BsaNspReference
+name: A4L2BsaActivation
+template: com.tsystems.tm.acc.ta.data.osr.models.NetworkLineProfileData
 values:
-  l2ccid: "l2ccid-110"
-  carrierBsaReference: "bba896d2-bd0e-4cf4-939f-300d3b106cee"
-  downBandwidth: 30000
-  upBandwidth: 10000
+  resourceOrder:
+    id: "7453"
+    resourceOrderItems:
+      - id: "7453"
+        action: "MODIFY"
+        resource:
+          id: "123"
+          resourceCharacteristics:
+            - name: "KLSID"
+              value: "12345"
+            - name: "AUTHMETHOD"
+              value: "1"
+            - name: "FEDERATIONPARTNER"
+              value: "t-online.de"
+            - name: "PROVIDERID"
+              value: "1234"
+            - name: "CARRIERBSAREFERENCE"
+              value: "bba896d2-bd0e-4cf4-939f-300d3b106cee"
+            - name: "PPDOWNL3"
+              value: "30000"
+            - name: "PPUPL3"
+              value: "10000"
+            - name:  "L2CCID"
+              value: "l2ccid-110"
 ---
-name: l2BsaNspReferenceModification
-template: com.tsystems.tm.acc.ta.data.osr.models.L2BsaNspReference
+name: A4L2BsaModification
+template: com.tsystems.tm.acc.ta.data.osr.models.NetworkLineProfileData
 values:
-  l2ccid: "l2ccid-110"
-  carrierBsaReference: "bba896d2-bd0e-4cf4-939f-300d3b106cee"
-  downBandwidth: 40000
-  upBandwidth: 20000
+  resourceOrder:
+    id: "7453"
+    resourceOrderItems:
+      - id: "7453"
+        action: "MODIFY"
+        resource:
+          id: "123"
+          resourceCharacteristics:
+            - name: "KLSID"
+              value: "12345"
+            - name: "AUTHMETHOD"
+              value: "1"
+            - name: "FEDERATIONPARTNER"
+              value: "t-online.de"
+            - name: "PROVIDERID"
+              value: "1234"
+            - name: "CARRIERBSAREFERENCE"
+              value: "bba896d2-bd0e-4cf4-939f-300d3b106cee"
+            - name: "PPDOWNL3"
+              value: "40000"
+            - name: "PPUPL3"
+              value: "20000"
+            - name:  "L2CCID"
+              value: "l2ccid-110"
