--- a/upiter-data/data/networklineprofile/WSResourceOrderRequests.yaml
+++ b/upiter-data/data/networklineprofile/WSResourceOrderRequests.yaml
@@ -1,4 +1,4 @@
-name: WSNetworkLineProfile
+name: WsNetworkLineProfileActivation
 template: com.tsystems.tm.acc.ta.data.osr.models.NetworkLineProfileData
 values:
   resourceOrder:
@@ -9,8 +9,6 @@ values:
         resource:
           id: "123"
           resourceCharacteristics:
-            - name: "CALID"
-              value: "DEU.DTAG.SQA2096879"
             - name: "KLSID"
               value: "12345"
             - name: "AUTHMETHOD"
@@ -24,27 +22,26 @@ values:
             - name: "PPUPL3"
               value: "123000"
 ---
-name: WSAccesslineForSubscriberNLP
-template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
+name: WsNetworkLineProfileModification
+template: com.tsystems.tm.acc.ta.data.osr.models.NetworkLineProfileData
 values:
-  lineId: "DEU.DTAG.SQA2096879"
----
-  name: WSNetworkLineProfileDelete
-  template: com.tsystems.tm.acc.ta.data.osr.models.NetworkLineProfileData
-  values:
-    resourceOrder:
-      id: "123"
-      resourceOrderItems:
-        - id: "123"
-          action: "DELETE"
-          resource:
-            id: "123"
-            resourceCharacteristics:
-              - name: "CALID"
-                value: "DEU.DTAG.SQA2096879"
-              - name: "KLSID"
-                value: "12345"
-              - name: "AUTHMETHOD"
-                value: "1"
-              - name: "FEDERATIONPARTNER"
-                value: "t-online.de"
+  resourceOrder:
+    id: "123"
+    resourceOrderItems:
+      - id: "123"
+        action: "MODIFY"
+        resource:
+          id: "123"
+          resourceCharacteristics:
+            - name: "KLSID"
+              value: "12345"
+            - name: "AUTHMETHOD"
+              value: "1"
+            - name: "FEDERATIONPARTNER"
+              value: "t-online.de"
+            - name: "PROVIDERID"
+              value: "1234"
+            - name: "PPDOWNL3"
+              value: "223000"
+            - name: "PPUPL3"
+              value: "223000"
