DIGIHUB-125292 dpuAccessTechnology is updated for DpuPlanningTest

--- a/osr-data/data/dpuplanning/CreateDpuDemandAllParameters.yml
+++ b/osr-data/data/dpuplanning/CreateDpuDemandAllParameters.yml
@@ -1,7 +1,7 @@
 name: CreateDpuDemandAllParameters
 template: com.tsystems.tm.acc.ta.data.osr.models.DpuDemand
 values:
-  dpuAccessTechnology: FTTB_CUDA
+  dpuAccessTechnology: FTTB
   dpuEndSz: "49/520/4/78G2"
   dpuInstallationInstruction: "30cm neben APL"
   dpuLocation: "Technikraum Keller links"
