--- a/osr-data/data/a4resourceinventory/networkelements/networkElementDPU.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementDPU.yml
@@ -3,7 +3,7 @@ template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElement
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NE
   vpsz: "49/${randomLong, 1000, 9999}/0"
-  fsz: "7KD2"
+  fsz: "7KU7"
   klsId: "1234567"
   category: "DPU"
   operationalState: "NOT_WORKING"
