--- a/osr-data/data/a4resourceinventory/networkserviceprofilel2bsa/networkServiceProfileL2BsaPrePro.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofilel2bsa/networkServiceProfileL2BsaPrePro.yml
@@ -9,5 +9,5 @@ values:
 # creationTime: "2021-01-27T10:00:02.105Z"
 # lastUpdateTime: "2021-02-02T08:59:50.888Z"
 #  lineId: "DEU.DTAG.123ABC0000"
-  lineId: "DEU.DTAG.123ABC1112"
+  lineId: "DEU.DTAG.${randomLong, 1000000000, 9999999999}"
 # virtualServiceProvider: "DTAG"
