--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
             <version>6.10.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-cucumber6-jvm</artifactId>
+            <version>2.14.0</version>
+        </dependency>
     </dependencies>
 
     <build>
