DIGIHUB-112122: extend domain and team DPU Commissioning test, DpuCommissioningUiRobot with feature toggle, adapt steps; add new test data

--- a/osr-data/data/commissioning/EndSz_49_30_179_71G1_SDX2221.yml
+++ b/osr-data/data/commissioning/EndSz_49_30_179_71G1_SDX2221.yml
@@ -13,3 +13,5 @@ values:
   klsId: "122334455"
   seriennummer: "ADTN180600B7"
   fiberOnLocationId: "71520003000111"
+  ponConnectionWe: "1"
+  ponConnectionGe: "0"
