--- a/osr-data/data/a4resourceinventory/networkelementports/networkElementPort_logicalLabel_G_FAST_TP_01.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/networkElementPort_logicalLabel_G_FAST_TP_01.yml
@@ -2,6 +2,6 @@ name: networkElementPort_logicalLabel_G_FAST_01
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementPort
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEP
-  operationalState: "NOT_WORKING"
+  operationalState: "WORKING"
   functionalPortLabel: "G_FAST_TP_01"
   type: "G_FAST_TP"
