--- a/osr-data/data/commissioning/EndSz_49_30_179_71G0_SDX2221.yml
+++ b/osr-data/data/commissioning/EndSz_49_30_179_71G0_SDX2221.yml
@@ -15,3 +15,5 @@ values:
   fiberOnLocationId: "71520003000100"
   ponConnectionWe: "1"
   ponConnectionGe: "0"
+  ponConnectionSl: "0"
+  accessTransmissionMedium: "TWISTED_PAIR"
