DIGIHUB-112122 DPU Demand creation, validation and deletion added, ETCD validation deleted

--- a/osr-data/data/commissioning/DpuDemand_49_30_179_71G1.yml
+++ b/osr-data/data/commissioning/DpuDemand_49_30_179_71G1.yml
@@ -4,3 +4,4 @@ values:
   dpuAccessTechnology: "FTTB_COAX"
   dpuEndSz: "49/30/179/71G1"
   numberOfNeededDpuPorts: "4"
+  fiberOnLocationId: "71520003000111"
