DIGIHUB-128869: updated test data for fttb provisioning autotests

--- a/upiter-data/data/fttbprovisioning/wgFttbAccessProvisioningForDeviceData.yaml
+++ b/upiter-data/data/fttbprovisioning/wgFttbAccessProvisioningForDeviceData.yaml
@@ -2,7 +2,7 @@
 name: dpuDeviceForFttbProvisioningTwistedPair
 template: com.tsystems.tm.acc.ta.data.osr.models.DpuDevice
 values:
-  vpsz: "49/30/179"
+  vpsz: "49/812/179"
   fsz: "71G0"
   ponConnectionWe: "8"
   ponConnectionGe: "4"
@@ -32,7 +32,7 @@ values:
 name: dpuDeviceForFttbProvisioningCoax
 template: com.tsystems.tm.acc.ta.data.osr.models.DpuDevice
 values:
-  vpsz: "49/30/179"
+  vpsz: "49/812/179"
   fsz: "71G1"
   ponConnectionWe: "8"
   ponConnectionGe: "4"
@@ -48,3 +48,8 @@ values:
   homeIdPool: 32
   lineIdPool: 32
   backhaulId: 1
+---
+name: dpuDemand
+template: com.tsystems.tm.acc.ta.data.osr.models.DpuDemand
+values:
+  numberOfNeededDpuPorts: "4"
