--- a/upiter-data/data/olt5600.yml
+++ b/upiter-data/data/olt5600.yml
@@ -14,3 +14,37 @@ values:
   numberOfPonSlots: 1
   numberOfEthernetSlots: 1
   matNumber: 40247069
+---
+name: EndSz_49_89_8000_76H2
+template: com.tsystems.tm.acc.ta.data.osr.models.OltDevice
+values:
+  vpsz: "49/89/8000"
+  fsz: "76H2"
+  bngEndsz: "49/911/30/7ZJA"
+  bngDownlinkPort: "ge-1/2/3"
+  bngDownlinkSlot: "0"
+  lsz: "4C1"
+  orderNumber: "1234567890"
+  vst: "@DefaultVst"
+  oltPort: "0"
+  oltSlot: "19"
+  numberOfPonSlots: 1
+  numberOfEthernetSlots: 1
+  matNumber: 40247069
+---
+name: EndSz_49_911_1100_76H1
+template: com.tsystems.tm.acc.ta.data.osr.models.OltDevice
+values:
+  vpsz: "49/911/1100"
+  fsz: "76H1"
+  bngEndsz: "49/911/30/7ZJA"
+  bngDownlinkPort: "ge-1/2/3"
+  bngDownlinkSlot: "0"
+  lsz: "4C1"
+  orderNumber: "1234567890"
+  vst: "@DefaultVst"
+  oltPort: "0"
+  oltSlot: "19"
+  numberOfPonSlots: 1
+  numberOfEthernetSlots: 1
+  matNumber: 40247069
