--- a/upiter-data/data/processsearch/processesData.yml
+++ b/upiter-data/data/processsearch/processesData.yml
@@ -15,3 +15,13 @@ values:
   slotNumber: ""
   portNumber: ""
   lineId: ""
+---
+name: oltDeviceForFailedFttbProvisioningTwistedPair
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/89/9000/76H6"
+  slotNumber: "1"
+  portNumber: "0"
+  homeIdPool: 32
+  lineIdPool: 32
+  backhaulId: 1
