--- a/upiter-data/data/a4provisioning/a4provisioning.yml
+++ b/upiter-data/data/a4provisioning/a4provisioning.yml
@@ -22,6 +22,32 @@ values:
   klsId: "123456"
   compositePartyId: 10001
 ---
+name: A4OltDevice7KH5
+template: com.tsystems.tm.acc.ta.data.osr.models.OltDevice
+values:
+  vpsz: "49/30/179"
+  fsz: "7KH5"
+  klsId: "123456"
+  compositePartyId: 10001
+---
+name: A4DpuDevice7KH6
+template: com.tsystems.tm.acc.ta.data.osr.models.DpuDevice
+values:
+  vpsz: "49/30/179"
+  fsz: "7KH6"
+  klsId: "123456"
+  compositePartyId: 10001
+  accessTransmissionMedium: "TWISTED_PAIR"
+---
+name: A4DpuDevice7KH7
+template: com.tsystems.tm.acc.ta.data.osr.models.DpuDevice
+values:
+  vpsz: "49/30/179"
+  fsz: "7KH7"
+  klsId: "123456"
+  compositePartyId: 10001
+  accessTransmissionMedium: "TWISTED_PAIR"
+---
 name: A4Port7KH0
 template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
 values:
@@ -74,3 +100,45 @@ values:
   defaultNetworkLineProfilesActive: 0
   nspReference: 0
   accessLinesCount: 0
+---
+name: A4Port7KH5
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/30/179/7KH5"
+  slotNumber: "1"
+  portNumber: "0"
+  homeIdPool: 32
+  lineIdPool: 1
+  accessLinesWG: 1
+  defaultNEProfilesActive: 0
+  defaultNetworkLineProfilesActive: 1
+  nspReference: 1
+  accessLinesCount: 1
+---
+name: A4Port7KH6
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/30/179/7KH6"
+  slotNumber: "1"
+  portNumber: "0"
+  homeIdPool: 0
+  lineIdPool: 0
+  accessLinesWG: 1
+  defaultNEProfilesActive: 0
+  defaultNetworkLineProfilesActive: 1
+  nspReference: 1
+  accessLinesCount: 1
+---
+name: A4Port7KH7
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/30/179/7KH7"
+  slotNumber: "1"
+  portNumber: "0"
+  homeIdPool: 0
+  lineIdPool: 0
+  accessLinesWG: 1
+  defaultNEProfilesActive: 0
+  defaultNetworkLineProfilesActive: 1
+  nspReference: 1
+  accessLinesCount: 1
