--- a/upiter-data/data/ontcommissioning/ontRegistrationData.yaml
+++ b/upiter-data/data/ontcommissioning/ontRegistrationData.yaml
@@ -11,38 +11,9 @@ values:
   serialNumber: "1234123412341234"
   newSerialNumber: "9876987698769876"
 ---
-name: AccessLineAnbieterwechsel
-template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
-values:
-  lineId: "DEU.DTAG.SQA2880866"
----
-name: PortFor33LineCase
+name: Port
 template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
 values:
   endSz: "49/30/179/76H1"
   slotNumber: "3"
   portNumber: "1"
----
-name: ForDecommissioning33LineCaseAccessLine1
-template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
-values:
-  lineId: "DEU.DTAG.SQA8823841"
-  homeId: "0037F3H"
----
-name: ForDecommissioning33LineCaseAccessLine2
-template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
-values:
-  lineId: "DEU.DTAG.DQA8823841"
-  homeId: "0037F3H"
----
-name: ForDecommissioingRollbackTrue
-template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
-values:
-  lineId: "DEU.DTAG.SQA4643677"
-  homeId: "0037WCC"
----
-name: ForDecommissioingRollbackFalse
-template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
-values:
-  lineId: "DEU.DTAG.SQA4935632"
-  homeId: "0037WQN"
