--- a/upiter-data/data/networkswitching/devices.yml
+++ b/upiter-data/data/networkswitching/devices.yml
@@ -17,3 +17,23 @@ values:
   homeIdPool: 32
   lineIdPool: 32
   accessLinesCount: 32
+---
+name: SourceRB_49_30_179_76H1
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/30/179/76H1"
+  slotNumber: "3"
+  portNumber: "1"
+  homeIdPool: 32
+  lineIdPool: 32
+  accessLinesCount: 16
+---
+name: TargetRB_49_911_1100_76H1
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
+values:
+  endSz: "49/911/1100/76H1"
+  slotNumber: "1"
+  portNumber: "1"
+  homeIdPool: 32
+  lineIdPool: 32
+  accessLinesCount: 32
