DIGIHUB-135992: updated postprovisioning autotests

--- a/upiter-data/data/postprovisioning/postprovisioning.yml
+++ b/upiter-data/data/postprovisioning/postprovisioning.yml
@@ -1,9 +1,9 @@
-name: portFor24_32Precondition
+name: portForPostProvisioning32
 template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
 values:
   endSz: "49/30/179/76H1"
   slotNumber: "3"
-  portNumber: "4"
+  portNumber: "6"
   homeIdPool: 32
   lineIdPool: 32
   backhaulId: 1
@@ -12,40 +12,32 @@ values:
   defaultNetworkLineProfilesActive: 16
   accessLinesCount: 16
 ---
-name: portFor24_32
+name: portForPostProvisioning64
 template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
 values:
   endSz: "49/30/179/76H1"
   slotNumber: "3"
-  portNumber: "4"
+  portNumber: "7"
   homeIdPool: 32
   lineIdPool: 32
   backhaulId: 1
-  accessLinesWG: 11
-  defaultNEProfilesActive: 32
-  defaultNetworkLineProfilesActive: 32
-  accessLinesCount: 32
+  accessLinesWG: 16
+  defaultNEProfilesActive: 16
+  defaultNetworkLineProfilesActive: 16
+  accessLinesCount: 16
 ---
-name: assignAccessLines24_32
+name: assignAccessLines32
 template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
 values:
   oltDevice: "@EndSz_49_30_179_76H1"
   endSz: "49/30/179/76H1"
   slotNumber: "3"
-  portNumber: "4"
+  portNumber: "6"
 ---
-name: Postprovisioning24_32StartInfo
-template: com.tsystems.tm.acc.ta.data.osr.models.BusinessInformation
+name: assignAccessLines64
+template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
 values:
+  oltDevice: "@EndSz_49_30_179_76H1"
   endSz: "49/30/179/76H1"
-  description: "Postprovisioning is started"
   slotNumber: "3"
-  portNumber: "4"
----
-name: Postprovisioning24_32EndInfo
-template: com.tsystems.tm.acc.ta.data.osr.models.BusinessInformation
-values:
-  endSz: "49/30/179/76H1"
-  description: "Postprovisioning is successfully completed"
-  slotNumber: "3"
-  portNumber: "4"
+  portNumber: "7"
