--- a/osr-data/data/rmk_at/defaultBngTargetPortEquipmentBusinessRef.yml
+++ b/osr-data/data/rmk_at/defaultBngTargetPortEquipmentBusinessRef.yml
@@ -1,8 +1,8 @@
 name: defaultBngTargetPortEquipmentBusinessRef
-template: com.tsystems.tm.acc.ta.data.osr.models.BngTargetPortEquipmentBusinessRef
+template: com.tsystems.tm.acc.ta.data.osr.models.EquipmentBusinessRef
 values:
   deviceType: "BNG"
-  endSz: "49/30/179/43G1"
+  endSz: "49/911/85/43G1"
   portName: "ge-7/8/7"
   portType: "ETHERNET"
   slotName: "2"
