--- a/osr-data/data/rmk_at/secondBngTargetPortEquipmentBusinessRef.yml
+++ b/osr-data/data/rmk_at/secondBngTargetPortEquipmentBusinessRef.yml
@@ -1,8 +1,8 @@
-name: defaultBngTargetPortEquipmentBusinessRef
+name: secondBngTargetPortEquipmentBusinessRef
 template: com.tsystems.tm.acc.ta.data.osr.models.EquipmentBusinessRef
 values:
   deviceType: "BNG"
   endSz: "49/911/85/43G1"
-  portName: "ge-7/8/7"
+  portName: "xe-0/0/1"
   portType: "ETHERNET"
   slotName: "0"
