--- a/osr-data/data/rmk_at/OltUplinkDifferentPorts1.yml
+++ b/osr-data/data/rmk_at/OltUplinkDifferentPorts1.yml
@@ -1,6 +1,6 @@
-name: OltUplinkSuccess
+name: OltUplinkDifferentPorts1
 template: com.tsystems.tm.acc.ta.data.osr.models.OltUplinkBusinessReferencen
 values:
   bngSourcePortEquipmentBusinessRef: "@defaultBngSourcePortEquipmentBusinessRef"
   bngTargetPortEquipmentBusinessRef: "@defaultBngTargetPortEquipmentBusinessRef"
-  oltPortEquipmentBusinessRef: "@defaultOltPortEquipmentBusinessRef"
+  oltPortEquipmentBusinessRef: "@adtranOltPortEquipmentBusinessRef"
