--- a/osr-data/data/rmk_at/adtranDpuPortEquipmentBusinessRef.yml
+++ b/osr-data/data/rmk_at/adtranDpuPortEquipmentBusinessRef.yml
@@ -1,8 +1,8 @@
-name: adtranOltPortEquipmentBusinessRef
+name: adtranDpuPortEquipmentBusinessRef
 template: com.tsystems.tm.acc.ta.data.osr.models.EquipmentBusinessRef
 values:
-  deviceType: "OLT"
-  endSz: "49/911/85/76H4"
+  deviceType: "DPU"
+  endSz: "49/911/85/76HC"
   portName: "1"
-  portType: "ETHERNET"
+  portType: "PON"
   slotName: null
