--- a/osr-data/data/a4resourceinventory/networkserviceprofileftthaccess/NetworkServiceProfileFtthAccessL2Bsa.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofileftthaccess/NetworkServiceProfileFtthAccessL2Bsa.yml
@@ -2,7 +2,7 @@ name: NetworkServiceProfileFtthAccessL2Bsa
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkServiceProfileFtthAccess
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NSP
-  ontSerialNumber: "" # if blank: field will be filled with returned ontSerialNumber of created NSP
-  lineId: "Autotest-LineId"
+  ontSerialNumber: "ont-${randomLong, 100000, 999999}"
+  lineId: "DEU.DTAG.${randomLong, 1000000000, 9999999999}"
   operationalState: "NOT_WORKING"
   lifecycleState: "PLANNING"
