--- a/osr-data/data/a4resourceinventory/networkserviceprofilel2bsa/NetworkServiceProfileL2BsaAllocate.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofilel2bsa/NetworkServiceProfileL2BsaAllocate.yml
@@ -5,5 +5,6 @@ values:
   operationalState: "NOT_WORKING"
   lifecycleState: "PLANNING"
   administrativeMode: "ENABLED"
+  lineId: "DEU.DTAG.${randomLong, 1000000000, 9999999999}"
   dataRateDown: "undefined"
   dataRateUp: "undefined"
