DIGIHUB-142105 update osr-tests for plural-import

--- a/osr-data/data/plural_tnp/defaultPluralTnp.yaml
+++ b/osr-data/data/plural_tnp/defaultPluralTnp.yaml
@@ -1,4 +1,4 @@
-name: defaultUeweg
+name: defaultPluralTnp
 template: com.tsystems.tm.acc.ta.data.osr.models.PluralTnpData
 values:
   negName: "49/${randomLong, 1000, 9999}/1/POD/01"
