--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
             <version>20160212</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.8</version>
+        </dependency>
     </dependencies>
 
     <build>
