DIGIHUB-144045 SEAL / PSL Mock added

--- a/osr-data/data/ztcommissioning/EndSz_49_911_85_76H8_SDX_6320_16.yml
+++ b/osr-data/data/ztcommissioning/EndSz_49_911_85_76H8_SDX_6320_16.yml
@@ -8,6 +8,7 @@ values:
   bngDownlinkSlot: "2"
   lsz: "4Z2"
   orderNumber: "0124456789"
+  vst: "@DefaultVst"
   oltPort: "1"
   tplnr: "000049-008571-000-002-001-001"
   bezeichnung: "SDX 6320-16"
