--- a/upiter-data/data/ontcommissioning/FTTBCommissioning.yaml
+++ b/upiter-data/data/ontcommissioning/FTTBCommissioning.yaml
@@ -1,4 +1,4 @@
-name: FTTBCommissioningTwistedPair
+name: AccessLineTpPort1
 template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
 values:
   oltDevice: "@EndSz_49_89_8000_76H2"
@@ -8,7 +8,7 @@ values:
   dpuPortNumber: "1"
   dpuPortType: "GFAST"
 ---
-name: FTTBCommissioningCoax
+name: AccessLineCoaxPort1
 template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
 values:
   oltDevice: "@EndSz_49_911_1100_76H1"
@@ -16,4 +16,24 @@ values:
   portNumber: "0"
   dpuDevice: "@dpuDeviceForFttbProvisioningCoax"
   dpuPortNumber: "1"
+  dpuPortType: "GFAST"
+---
+name: AccessLineTpPort2
+template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
+values:
+  oltDevice: "@EndSz_49_89_8000_76H2"
+  slotNumber: "1"
+  portNumber: "0"
+  dpuDevice: "@dpuDeviceForFttbProvisioningTwistedPair"
+  dpuPortNumber: "2"
+  dpuPortType: "GFAST"
+---
+name: AccessLineCoaxPort2
+template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
+values:
+  oltDevice: "@EndSz_49_911_1100_76H1"
+  slotNumber: "1"
+  portNumber: "0"
+  dpuDevice: "@dpuDeviceForFttbProvisioningCoax"
+  dpuPortNumber: "2"
   dpuPortType: "GFAST"
