--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
         </dependency>
         <dependency>
             <groupId>com.tsystems.tm.api.client</groupId>
+            <artifactId>olt-commissioning-event-listener</artifactId>
+            <version>3.1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tsystems.tm.api.client</groupId>
             <artifactId>dhcp4olt</artifactId>
             <version>3.1.0.0</version>
         </dependency>
