--- a/osr-data/data/credentials/rhssoCredentialsOltMobileUi.yml
+++ b/osr-data/data/credentials/rhssoCredentialsOltMobileUi.yml
@@ -1,5 +1,5 @@
 name: RHSSOOltMobileUi
 template: com.tsystems.tm.acc.ta.data.osr.models.Credentials
 values:
-  login: "Freddieztc"
+  login: "freddieztc"
   password: "Mercury_ztc1"
