DIGIHUB-144046 Missing connection between OTL and EMS and repetition of the oltBasicConfiguration step from the Mobile-UI

--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
             <artifactId>dhcp4olt</artifactId>
             <version>3.1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.tsystems.tm.api.client</groupId>
+            <artifactId>seal</artifactId>
+            <version>3.1.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
