--- a/osr-data/data/a4resourceinventory/networkelementgroups/defaultNetworkElementGroup.yml
+++ b/osr-data/data/a4resourceinventory/networkelementgroups/defaultNetworkElementGroup.yml
@@ -2,6 +2,7 @@ name: defaultNetworkElementGroup
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementGroup
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEG
-  name: "NEG-${randomLong, 100000, 999999}" # if blank: random name will be generated and field will be filled with that value
+  name: "0NEG-${randomLong, 100000, 999999}" # if blank: random name will be generated and field will be filled with that value
+  description: "NEG created during osr-test integration test"
   operationalState: "NOT_WORKING"
   lifecycleState: "PLANNING"
