DIGIHUB-142578 Refactoring A4 test data

--- a/osr-data/data/a4resourceinventory/networkelementports/networkElementPort_logicalLabel_10G_002.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/networkElementPort_logicalLabel_10G_002.yml
@@ -1,7 +1,7 @@
 name: networkElementPort_logicalLabel_10G_002
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementPort
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created NEP
+  uuid: "" # don't set! Filled automatically
   operationalState: "WORKING"
   functionalPortLabel: "10G_002"
   type: "10G_ETHERNET_PORT"
