--- a/osr-data/data/a4resourceinventory/networkElementLink/networkElementLinkLcsOperating.yml
+++ b/osr-data/data/a4resourceinventory/networkElementLink/networkElementLinkLcsOperating.yml
@@ -1,7 +1,7 @@
 name: networkElementLinkLcsOperating
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementLink
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created NEL
+  uuid: "" # don't set! Filled automatically
   ueWegId: "" # don't set! Filled automatically; you can do .getUeWegId()
   lbz: "" # don't set! Filled automatically; you can do .getLbz()
   lsz: "" # don't set! Filled automatically; you can do .getLsz()
