--- a/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
@@ -1,7 +1,7 @@
 name: defaultNetworkElementPort
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementPort
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created NEP
+  uuid: "" # don't set! Filled automatically
   operationalState: "NOT_WORKING"
   functionalPortLabel: "GPON_${scope, global.a4Provisioning.portNumber}"
-  type: "GPON" # if blank: field will be filled
+  type: "GPON"
