--- a/osr-data/data/a4resourceinventory/networkelementports/networkElementPort_logicalLabel_100G_001.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/networkElementPort_logicalLabel_100G_001.yml
@@ -1,7 +1,7 @@
 name: networkElementPort_logicalLabel_100G_001
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementPort
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created NEP
+  uuid: "" # don't set! Filled automatically
   operationalState: "WORKING"
   functionalPortLabel: "100G_001"
   type: "100G_ETHERNET_PORT"
