--- a/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
@@ -1,7 +1,7 @@
 name: defaultNetworkElement
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElement
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created NE
+  uuid: "" # don't set! Filled automatically
   vpsz: "${scope, global.a4Provisioning.vpsz}" # VPSZ in combination with FSZ must be unique
   fsz: "${scope, global.a4Provisioning.fsz}"
   klsId: "1234567"
