--- a/osr-data/data/a4resourceinventory/networkelements/networkElementInstallingOlt01.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementInstallingOlt01.yml
@@ -1,7 +1,7 @@
 name: networkElementInstallingOlt01
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElement
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created NE
+  uuid: "" # don't set! Filled automatically
   vpsz: "49/${randomLong, 1000, 9999}/0"
   fsz: "7KDA"
   klsId: "1234567"
