--- a/osr-data/data/a4resourceinventory/networkserviceprofilea10nsp/networkServiceProfileA10NspPrePro.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofilea10nsp/networkServiceProfileA10NspPrePro.yml
@@ -1,6 +1,6 @@
 name: networkServiceProfileA10NspPrePro
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkServiceProfileA10Nsp
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created NSP
+  uuid: "" # don't set! Filled automatically
   operationalState: "NOT_WORKING"
   lifecycleState: "PLANNING"
