--- a/osr-data/data/a4resourceinventory/networkserviceprofileftthaccess/defaultNetworkServiceProfileFtthAccess.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofileftthaccess/defaultNetworkServiceProfileFtthAccess.yml
@@ -1,7 +1,7 @@
 name: defaultNetworkServiceProfileFtthAccess
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkServiceProfileFtthAccess
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created NSP
+  uuid: "" # don't set! Filled automatically
   ontSerialNumber: "ont-${randomLong, 100000, 999999}"
   lineId: "DEU.DTAG.${randomLong, 1000000000, 9999999999}"
   operationalState: "NOT_WORKING"
