--- a/osr-data/data/a4resourceinventory/networkserviceprofilel2bsa/networkServiceProfileL2BsaPrePro.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofilel2bsa/networkServiceProfileL2BsaPrePro.yml
@@ -1,7 +1,7 @@
 name: networkServiceProfileL2BsaPrePro
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkServiceProfileL2Bsa
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created NSP
+  uuid: "" # don't set! Filled automatically
   operationalState: "NOT_WORKING"
   lifecycleState: "PLANNING"
   administrativeMode: "ACTIVATED"
