--- a/osr-data/data/a4resourceinventory/terminationpoints/defaultTerminationPointL2Bsa.yml
+++ b/osr-data/data/a4resourceinventory/terminationpoints/defaultTerminationPointL2Bsa.yml
@@ -1,7 +1,7 @@
 name: defaultTerminationPointL2Bsa
 template: com.tsystems.tm.acc.ta.data.osr.models.A4TerminationPoint
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created TP
+  uuid: "" # don't set! Filled automatically
   subType: "L2BSA_TP"
   carrierBsaReference: "Autotest-Carrier"
   state: "UNUSED"
