--- a/osr-data/data/a4resourceinventory/terminationpoints/terminationPointA10NspPrePro2.yml
+++ b/osr-data/data/a4resourceinventory/terminationpoints/terminationPointA10NspPrePro2.yml
@@ -1,5 +1,5 @@
 name: terminationPointA10NspPrePro2
 template: com.tsystems.tm.acc.ta.data.osr.models.A4TerminationPoint
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created TP
+  uuid: "" # don't set! Filled automatically
   subType: "A10NSP_TP"
