--- a/osr-data/data/a4resourceinventory/terminationpoints/terminationPointFtthAccessPrePro.yml
+++ b/osr-data/data/a4resourceinventory/terminationpoints/terminationPointFtthAccessPrePro.yml
@@ -1,5 +1,5 @@
 name: terminationPointFtthAccessPrePro
 template: com.tsystems.tm.acc.ta.data.osr.models.A4TerminationPoint
 values:
-  uuid: "" # if blank: field will be filled with returned uuid of created TP
+  uuid: "" # don't set! Filled automatically
   subType: "PON_TP"
