--- a/osr-data/data/a4resourceinventory/networkserviceprofileftthaccess/NetworkServiceProfileFtthAccessB.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofileftthaccess/NetworkServiceProfileFtthAccessB.yml
@@ -6,3 +6,4 @@ values:
   lineId: "DEU.DTAG.${randomLong, 1000000000, 9999999999}"
   operationalState: "NOT_WORKING"
   lifecycleState: "INSTALLING"
+  oltPortOntLastRegisteredOn: "" # don't set! Filled automatically
