--- a/upiter-data/data/defaultprofiles/defaultNetworkLineProfile.yml
+++ b/upiter-data/data/defaultprofiles/defaultNetworkLineProfile.yml
@@ -10,6 +10,18 @@ values:
   maxUpBandwidth: 584064
   state: "ACTIVE"
 ---
+name: defaultNLProfileFtthV2
+template: com.tsystems.tm.acc.ta.data.osr.models.DefaultNetworkLineProfile
+values:
+  accessType: "FTTH"
+  minDownBandwidth: 31808
+  minUpBandwidth: 12032
+  guaranteedDownBandwidth: 31808
+  guaranteedUpBandwidth: 12032
+  maxDownBandwidth: 1168192
+  maxUpBandwidth: 584064
+  state: "ACTIVE"
+---
 name: defaultNLProfileFttbTP
 template: com.tsystems.tm.acc.ta.data.osr.models.DefaultNetworkLineProfile
 values:
