--- a/osr-data/data/credentials/rhssoCredentialsMobileDpu.yml
+++ b/osr-data/data/credentials/rhssoCredentialsMobileDpu.yml
@@ -2,4 +2,4 @@ name: RHSSOMobileDpu
 template: com.tsystems.tm.acc.ta.data.osr.models.Credentials
 values:
   login: "autotest"
-  password: "Mobile!4"
+  password: "Morpheus123456!?*"
