--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,7 @@
     <packaging>jar</packaging>
     <name>osr-tests</name>
     <description>osr-tests</description>
-    <version>3049.0</version>
-
+    <version>3049.2</version>
     <parent>
         <groupId>com.tsystems.tm.acc.tests</groupId>
         <artifactId>acc-domain-tests-bom</artifactId>
@@ -152,6 +151,11 @@
             <groupId>com.tsystems.tm.api.client</groupId>
             <artifactId>dhcp4olt</artifactId>
             <version>3.1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tsystems.tm.api.client</groupId>
+            <artifactId>osr-process-log</artifactId>
+            <version>4.1.3</version>
         </dependency>
         <dependency>
             <groupId>com.tsystems.tm.api.client</groupId>
