--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
             <artifactId>seal</artifactId>
             <version>3.1.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.tsystems.tm.api.client</groupId>
+            <artifactId>olt-material-catalog</artifactId>
+            <version>4.1.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
