DIGIHUB-153676: updated ont supplier ui credentials

--- a/upiter-data/data/credentials/LeonhardWeissForDTAGSupplier.yml
+++ b/upiter-data/data/credentials/LeonhardWeissForDTAGSupplier.yml
@@ -1,5 +1,5 @@
 name: LeonhardWeissForDTAGSupplier
 template: com.tsystems.tm.acc.ta.data.osr.models.Credentials
 values:
-  login: "leonhard-weiss-supplier"
-  password: "$1Autotest"
+  login: "evpavlov2"
+  password: "Evpavlov*0"
