--- a/upiter-data/data/accesslinessearch/searchByEndSz.yml
+++ b/upiter-data/data/accesslinessearch/searchByEndSz.yml
@@ -1,12 +1,12 @@
-name: linesByEndSz
-template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
+name: searchByEndSz
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
 values:
   endSz: "49/89/8000/76H2"
   slotNumber: ""
   portNumber: ""
 ---
-name: linesByEndSzSlotPort
-template: com.tsystems.tm.acc.ta.data.osr.models.AccessLine
+name: searchByEndSzSlotPort
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
 values:
   endSz: "49/89/8000/76H2"
   slotNumber: "3"
