DIGIHUB-144598 DOmain test DPU Commissioning from Mobile DPU added

--- a/osr-data/data/commissioning/EndSz_49_30_306_71G1_SDX2221.yml
+++ b/osr-data/data/commissioning/EndSz_49_30_306_71G1_SDX2221.yml
@@ -8,10 +8,10 @@ values:
   oltGponPort: "3"
   bngEndsz: "49/30/306/43G3"
   bngDownlinkPort: "ge-4/8/8"
-  bezeichnung: "SDX2221-04-CX"
+  bezeichnung: "SDX2221-04-TP"
   hersteller: "ADTRAN"
   klsId: "122334466"
-  seriennummer: "ADTN180600B7"
+  seriennummer: "9988765"
   fiberOnLocationId: "71520003000999"
   ponConnectionWe: "1"
   ponConnectionGe: "0"
