DIGIHUB-144598 DOmain test DPU Commissioning from Mobile DPU added

--- a/osr-data/data/commissioning/DpuDemand_49_30_306_71G1.yml
+++ b/osr-data/data/commissioning/DpuDemand_49_30_306_71G1.yml
@@ -1,7 +1,7 @@
 name: DpuDemand_49_30_306_71G1
 template: com.tsystems.tm.acc.ta.data.osr.models.DpuDemand
 values:
-  dpuAccessTechnology: "FTTB_COAX"
+  dpuAccessTechnology: "FTTB"
   dpuEndSz: "49/30/306/71G1"
   numberOfNeededDpuPorts: "4"
   fiberOnLocationId: "71520003000999"
