--- a/osr-data/data/commissioning/EndSz_49_30_306_71G1_SDX2221.yml
+++ b/osr-data/data/commissioning/EndSz_49_30_306_71G1_SDX2221.yml
@@ -16,4 +16,4 @@ values:
   ponConnectionWe: "1"
   ponConnectionGe: "0"
   ponConnectionSl: "0"
-  accessTransmissionMedium: "COAX"
+  accessTransmissionMedium: "TWISTED_PAIR"
